TIFF: support signed integer formats

BUG: 423389